# Beld

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  floor_plan_v53.json  pyproject.toml  requirements.txt  v53_modular.py
.github/workflows/: tests.yml
beld/: __init__.py  v51_optimizer.py
beld/export/: __init__.py  json_export.py  svg_export.py
beld/geometry/: __init__.py
beld/models/: __init__.py
beld/openings/: __init__.py
beld/optimizer/: __init__.py  ai_refiner.py  bridge.py  generator.py  optimizer.py  solver.py
beld/pipeline/: __init__.py
beld/rendering/: __init__.py  renderer.py  svg_elements.py  transform.py
beld/validation/: __init__.py  issues.py  report.py  rules.py
beld/walls/: __init__.py
legacy/: v52_optimizer.py  v52b_optimizer_corrected.py
tests/: test_geometry.py  test_optimizer.py  test_pipeline_validation_integration.py  test_smoke.py  test_validation.py  test_validation_structured.py
