[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beld"
version = "0.3.0"
description = "Modular floor-plan generation framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shapely>=2.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["beld*"]
